--- a/WolvenKit/Views/Editor/Basic/AssetBrowserView.xaml
+++ b/WolvenKit/Views/Editor/Basic/AssetBrowserView.xaml
@@ -49,38 +49,6 @@
                             </Grid.Resources>
 
 
-
-                            <!-- <TreeView
-                             pu:TreeViewHelper.ExpandMode="SingleClick"
-                             pu:TreeViewHelper.ExpandedBrush="{DynamicResource MahApps.Brushes.Accent3}"
-                             pu:TreeViewHelper.ItemHeight="25"
-                             pu:TreeViewHelper.ItemPadding="1"
-                             pu:TreeViewHelper.TreeViewStyle="Chain"
-                             BorderBrush="{DynamicResource MahApps.Brushes.Accent4}"
-                             FontSize="11"
-                             ItemsSource="{Binding RootNode.SubDirectories}"
-                             SelectedItemChanged="TreeView_OnSelectedItemChanged"
-                             Visibility="Visible"
-                             >
-
-                                <TreeView.ItemTemplate>
-
-                                    <HierarchicalDataTemplate ItemsSource="{Binding SubDirectories}">
-
-                                        <StackPanel Margin="0,0,0,0" Orientation="Horizontal">
-                                            <svgc:SvgViewbox
-                                             Width="12"
-                                             Height="12"
-                                             Margin="0"
-                                             Source="{Binding Extension, Converter={StaticResource ExtensionToImageConverter}}"
-                                             Stretch="Uniform"
-                                             />
-                                            <TextBlock FontSize="11" Text="{Binding Name}" />
-                                        </StackPanel>
-                                    </HierarchicalDataTemplate>
-                                </TreeView.ItemTemplate>
-                            </TreeView>-->
-
                             <syncfusion:SfTreeNavigator
                              x:Name="TreeNavSF"
                              Header="Depot"
@@ -118,7 +86,7 @@
                             </syncfusion:SfTreeNavigator>
                             <Border
                              x:Name="VisibleBackButton"
-                             Width="35"
+                             Width="37"
                              Height="35"
                              Margin="5,2,0,0"
                              HorizontalAlignment="Left"
@@ -132,6 +100,7 @@
                                  Click="Button_Click"
                                  >
                                     <iconPacks:PackIconRemixIcon
+                                     Width="12"
                                      HorizontalAlignment="Center"
                                      VerticalAlignment="Center"
                                      Kind="ArrowGoBackFill"
@@ -148,90 +117,6 @@
 
 
 
-                        <DockPanel
-                         Height="40"
-                         VerticalAlignment="Top"
-                         Background="Transparent"
-                         >
-
-                            <hc:UniformSpacingPanel VerticalAlignment="Center">
-                                <Button
-                                 Width="40"
-                                 Height="25"
-                                 Margin="0,3,-10,0"
-                                 VerticalAlignment="Center"
-                                 hc:IconElement.Geometry="{DynamicResource GlobalLeftArrow}"
-                                 Background="Transparent"
-                                 BorderBrush="{x:Null}"
-                                 Style="{StaticResource ButtonIcon}"
-                                 Visibility="Collapsed"
-                                 />
-
-
-
-                                <Button
-                                 Width="40"
-                                 hc:IconElement.Geometry="{DynamicResource AssetBrowserStar}"
-                                 Background="Transparent"
-                                 BorderBrush="{x:Null}"
-                                 Style="{StaticResource ButtonIcon}"
-                                 Visibility="Collapsed"
-                                 />
-
-                                <feather:TreeBreadcrumb
-                                 Margin="5,0,15,0"
-                                 VerticalAlignment="Center"
-                                 Background="Transparent"
-                                 BorderBrush="Transparent"
-                                 CurrentNode="{Binding Path=BreadCrumbCurrentNode}"
-                                 Foreground="White"
-                                 PathSeparator="\"
-                                 SetCurrentNodeCommand="{Binding Path=SetCurrentNodeCommand}"
-                                 Visibility="Collapsed"
-                                 />
-
-
-
-
-
-
-
-
-
-
-
-
-
-                                <hc:ComboBox
-                                 MinWidth="0"
-                                 ItemsSource="{Binding Classes}"
-                                 SelectedItem="{Binding SelectedClass}"
-                                 Visibility="Collapsed"
-                                 >
-                                    <ComboBox.ItemsPanel>
-                                        <ItemsPanelTemplate>
-                                            <VirtualizingStackPanel />
-                                        </ItemsPanelTemplate>
-                                    </ComboBox.ItemsPanel>
-                                </hc:ComboBox>
-
-
-                                <hc:ComboBox
-                                 MinWidth="100"
-                                 ItemsSource="{Binding Extensions}"
-                                 SelectedItem="{Binding SelectedExtension}"
-                                 Visibility="Collapsed"
-                                 >
-                                    <ComboBox.ItemsPanel>
-                                        <ItemsPanelTemplate>
-                                            <VirtualizingStackPanel />
-                                        </ItemsPanelTemplate>
-                                    </ComboBox.ItemsPanel>
-                                </hc:ComboBox>
-                            </hc:UniformSpacingPanel>
-
-
-                        </DockPanel>
                         <Grid
                          Height="38"
                          HorizontalAlignment="Stretch"
@@ -311,7 +196,15 @@
                              x:Name="hierarchicalNavigator"
                              Width="auto"
                              Margin="160,0,0,0"
-                             />
+                             IsEnableHistory="False"
+                             ItemsSource="{Binding RootNode.SubDirectories, Mode=OneWay, TargetNullValue=bone}"
+                             >
+                                <syncfusion:HierarchyNavigator.ItemTemplate>
+                                    <HierarchicalDataTemplate ItemsSource="{Binding SubDirectories}">
+                                        <TextBlock Margin="2,0" Text="{Binding Name}" />
+                                    </HierarchicalDataTemplate>
+                                </syncfusion:HierarchyNavigator.ItemTemplate>
+                            </syncfusion:HierarchyNavigator>
 
 
                         </Grid>
@@ -1049,14 +942,14 @@
 
                                     </syncfusion:GridTemplateColumn>
 
-
-
                                     <syncfusion:GridTextColumn
                                      AllowFiltering="True"
                                      ColumnSizer="Star"
                                      IsReadOnly="True"
                                      MappingName="Name"
                                      />
+
+
                                     <syncfusion:GridTextColumn
                                      AllowFiltering="True"
                                      ColumnSizer="Auto"
